@@ -1,3 +1,9 @@
+2012-04-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimizations/52891
+	* gcc.c-torture/compile/pr52891-1.c: New test.	
+	* gcc.c-torture/compile/pr52891-2.c: New test.
+
 2012-04-20  Ian Lance Taylor  <iant@google.com>
 
 	* go.test/go-test.exp (go-set-goarch): Recognize powerpc*-*-*.
