@@ -1,3 +1,10 @@
+2012-04-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimizations/52891
+	* tree-vect-patterns.c (adjust_bool_pattern): Use
+	build_nonstandard_type even if rhs1 has unsigned INTEGER_TYPE,
+	but with non-standard precision.
+
 2012-04-22  Ian Lance Taylor  <iant@google.com>
 
 	* godump.c (go_output_typedef): Dump size of structs.
